sna: Only generate a coldprobe RR probe when RandR is enabled

If Xinerama is enabled, RandR is disabled and calling into RR functions
merely explode, so don't.

Reported-by: Mariusz Białończyk <manio@skyboo.net>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=108495
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>